@@ -10,6 +10,7 @@ git-annex (10.20251118) UNRELEASED; urgency=medium
     similar. This is equivilant to the now deprecated Amazon Glacier.
     (Needs aws-0.25.2)
   * stack.yaml: Use aws-0.25.2.
+  * Added annex.trashbin configuration.
 
  -- Joey Hess <id@joeyh.name>  Tue, 18 Nov 2025 12:34:12 -0400
 
